# syncom

./: HISTORY.md  README.md  pyproject.toml
examples/blog_post_generator/: README.md  main.py
examples/blog_post_generator/sample_articles/: advanced_prompting.md  prompts_adversarial.md  prompts_applications.md  prompts_chatgpt.md  prompts_intro.md
examples/blog_post_generator/templates/: author.md  editor.md
examples/cover_letter_writer/: main.py
examples/cover_letter_writer/data/: job_description.txt  resume.txt
examples/cover_letter_writer/templates/: cover_letter_prompt.md  resume_analysis_prompt.md
syncom/: __init__.py  aimodel.py  pipeline.py  prompts.py  runnable.py  template.py  version.py
syncom/interop/: llm.py
syncom/prompts/: agent.py  basic_instruction.py  chain_of_thought.py
syncom/steps/: base.py  data.py  functional.py  llm.py  log.py  prompt.py
tests/: conftest.py  test_api.py  test_prompts.py  test_template.py
